# tauri-ws-template

./: README.md  package-lock.json  package.json
src/: configtabhtml.js  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: enigo.rs  key_listener.rs  main.rs  proxy.rs  route_manager.rs  websocket_router.rs  window_manager.rs
src-tauri/src/ws/: router.rs
src-tauri/src/ws/handlers/: close_window.rs  create_window.rs  focus_window.rs  get_window_info.rs  list_windows.rs  mod.rs  navigate_window.rs  ping.rs  proxy_handler.rs  qr_code.rs  reload_window.rs  set_always_on_top.rs  toggle_always_on_top.rs  toggle_transparency.rs
src/assets/: index-BOihMrXO.js  index-D9Nz5-KH.js  index-DqlRrP6h.js
src/audio/: tts.js
src/database/: indexdb.js
src/features/: Actions.js  Minecraftconfig.js  obcontroller.js  speechconfig.js
src/utils/: utils.js
src/webcomponents/: webcomponents.js
