[package]
name = "tauriarm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauriarm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rdev = "0.5.0"
warp = "0.3"                                   # Framework web para servir WebSocket
tokio = { version = "1", features = ["full"] } # Requerido para manejar tareas asincrónicas
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
enigo = "0.3.0"
env_logger = "0.11"
url = "2.5.4"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
uuid = "1.3.1"
