[package]
name = "tauriarm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauriarm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri con las características necesarias para manejo de ventanas
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# WebSocket y networking
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Input handling
rdev = "0.5.0"
enigo = "0.3.0"

# Utilidades
uuid = { version = "1.3.1", features = ["v4"] }
url = "2.5.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
